[Misc] Add Maven cache to pull request build
Add cached based on https://github.com/actions/cache/blob/main/examples.md#java---maven

--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -12,5 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache local Maven repository
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Run Maven build
         run: LANG=C.UTF-8 MAVEN_OPTS='-Xmx2048m -Xms512m' mvn clean install -Plegacy,quality,standalone --no-transfer-progress javadoc:javadoc -Ddoclint=all -Ddevelocity.cache.remote.storeEnabled=false
